# fast-tmp2

./: .gitignore  Makefile  README.md  alembic.ini  conftest.py  cookiecutter.json  index.md  pyproject.toml  tasks.md  test_1.py  tt.py
alembic/: env.py
alembic/versions/: 61b7719bcf37_.py  80f1b344aeb1_message.py  914505e508e6_.py  f29ae2b3b150_init_db.py
cache/: __init__.py
cli/: __init__.py
example/: __init__.py  alembic.ini  docker-compose.yml  factory.py  main.py  models.py  pyproject.toml  schemas.py  settings.py
example/alembic/versions/: 836047786762_.py  a96ffcfd9b84_init.py  bc23a83c5cc1_.py
example/apps/api/: __init__.py
example/apps/api/routes/: amis_html.py  auth.py  crud_server.py  file_tree.py  t.py
example/example/: factory.py  models.py  schemas.py  settings.py
example/example/apps/api/: __init__.py
example/example/apps/api/routes/: amis_html.py
example1/: __init__.py  functions.py  models.py  settings.py
example1/apps/api/: __init__.py
example1/apps/api/routes/: t.py
fast_cli/: __init__.py
fast_cli/tpl/: cookiecutter.json
fast_cli/tpl/{{cookiecutter.project_slug}}/: .env.example  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
fast_cli/tpl/{{cookiecutter.project_slug}}/alembic/: env.py
fast_cli/tpl/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: functions.py  main.py  settings.py
fast_cli/tpl/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/api/: __init__.py
fast_cli/tpl/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/api/routes/: hello_fast_tmp.py
fast_tmp/: amis_app.py  amis_router.py  db.py  depends.py  exception_handler.py  exceptions.py  factory.py  func.py  models.py  responses.py  schemas.py  tertoise_fields.py
fast_tmp/amis/: creator.py  creator_server.py  tpl.py  utils.py
fast_tmp/amis/schema/: abstract_schema.py  buttons.py  crud.py  frame.py  page.py
fast_tmp/amis/schema/forms/: __init__.py  enums.py  widgets.py
fast_tmp/api/: __init__.py  admin.py  group.py  permission.py  schemas.py  site.py  user.py  view_creator.py
fast_tmp/apps/: __init__.py  error_code.py  exceptions.py  responses.py
fast_tmp/apps/api/: __init__.py  schemas.py
fast_tmp/apps/api/routes/: __init__.py  group.py  permission.py  user.py
fast_tmp/conf/: __init__.py  global_settings.py
fast_tmp/depends/: __init__.py  auth.py  cas.py  oidc.py  pageing.py
fast_tmp/jinja_extension/: tags.py
fast_tmp/static/: index.html
fast_tmp/templates/gh-pages/: index.html  login.html
fast_tmp/utils/: token.py
src/: __init__.py  factory.py  main.py  models.py  settings.py
src/apps/api/routes/: amis_html.py  file_tree.py
tests/: t.py  t_py.py  test_asyncio.py  test_cache.py  test_fastapi.py  test_fastapi_asyncio.py  test_inspect.py  test_main.py  test_many_2_many.py  test_metaclass.py  test_oidc.py  test_sqlalchemy.py  test_utils.py  test_yield.py
tests/test_cli/fast_t/: docker-compose.yml  pyproject.toml
tests/test_cli/fast_t/fast_t/: __init__.py  factory.py  main.py  schemas.py
tests/test_cli/fast_t/fast_t/apps/api/: __init__.py
tests/test_cli/fast_t/fast_t/apps/api/routes/: hello_fast_tmp.py
{{cookiecutter.project_slug}}/: main.py
