[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = []
license = "Apache-2.0"


[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
watchgod = "^0.6"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"
python-jose = "^3.2.0"
passlib = "^1.7.4"
aiofiles = "^0.6.0"
jinja2 = "^2.11.2"
typer = "^0.3.2"
sqlalchemy = "^1.4.0b2"
pydantic-sqlalchemy = "^0.0.8"
alembic = "^1.5.4"
python-dotenv = "^0.15.0"
fast-tmp = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "^20.8b1"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-asyncio = "*"
asynctest = "*"
bandit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
dbdrivers = ["aioredis"]
sentry = ["sentry-sdk"]

[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true