[tool.poetry]
name = "fast-t"
version = "0.1.0"
description = "为fastapi项目开发做准备"
authors = ["chise <chise123@live.com>"]
license = "Apache-2.0"



[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
watchgod = "^0.6"
uvicorn = "^0.13.3"
redis = "^3.5.3"
python-multipart = "^0.0.5"
python-jose = "^3.2.0"
passlib = "^1.7.4"
aiofiles = "^0.6.0"
jinja2 = "^2.11.2"
typer = "^0.3.2"
sqlalchemy = "^1.4.0b2"
pydantic-sqlalchemy = "^0.0.8"
fast-tmp = "^0.2.5"

[tool.poetry.dev-dependencies]
sentry-sdk = "^0.19.5"
python-dotenv = "^0.15.0"
flake8 = "*"
isort = "*"
black = "^20.8b1"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-asyncio = "*"
asynctest = "*"
bandit = "*"
#mypy = "*"
httpx = "^0.16.1"
requests = "^2.25.1"
python-cas = "^1.5.0"
aioredis = "^1.3.1"
authlib = "^0.15.3"
itsdangerous = "^1.1.0"
asyncpg = "^0.22.0"
alembic = "^1.5.4"
psycopg2 = "^2.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true
